[9072b7a945c12d41f097eaff388f369349999c56]: Visão geral dos fluxos de autorização

--- a/manual/silent-order-post.html
+++ b/manual/silent-order-post.html
@@ -145,6 +145,20 @@
   <li>Mantenha controle total sobre a experiência de check-out e elementos de gestão da sua marca.</li>
 </ul>
 
+<h1 id="fluxo-de-autorização">Fluxo de Autorização</h1>
+
+<h2 id="fluxo-padrão-de-autorização">Fluxo Padrão de Autorização</h2>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxo-padrao-de-autorizacao.jpg" alt="Fluxo Padrão" /></p>
+
+<p>É preciso que o estabelecimento seja <strong>PCI Compliance</strong> (PCI = Regras de segurança para manipular os dados do cartão)</p>
+
+<h2 id="fluxo-de-autorização-com-silent-order-post">Fluxo de Autorização com Silent Order POST</h2>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxo-de-autorizacao-com-sop.jpg" alt="Fluxo Padrão" /></p>
+
+<p>O servidor <strong>não trafega os dados do cartão</strong> abertamente.</p>
+
 <h1 id="fluxo-transacional">Fluxo Transacional</h1>
 
 <p><img src="https://developercielo.github.io/images/fluxo-silent-order-post-cielo.jpg" alt="Fluxo Silent Order Post" /></p>
