[f9891845ab3147796b6491d4d089f57e2af5b9b5]: Update 2017-01-01-cielo-lio.md
Adição da frequência na especificação das LIOs

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -247,6 +247,12 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Dual Chip</td>
     </tr>
     <tr>
+      <td>Frequência</td>
+      <td>2.4 GHz</td>
+      <td>2.4 GHz</td>
+      <td>2.4 GHz</td>
+    </tr>
+    <tr>
       <td>Tipo do SIM Card</td>
       <td>micro SIM (3FF)</td>
       <td>micro SIM (3FF)</td>
