--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3937,14 +3937,26 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
 
 <p>O objetivo da certificação de aplicativos é garantir que todos os aplicativos presentes na plataforma Cielo LIO, sejam próprios ou públicos, estejam de acordo com as regras e critérios estabelecidos pela Cielo.</p>
 
-<p>A certificação de aplicativos da Cielo LIO visa garantir os seguintes pontos:</p>
+<p>Para a Certificação de APPs ser efetivada com sucesso, é necessário possuir os seguintes itens para a aprovação da APP</p>
 
 <ul>
   <li>Fluxo de pagamento funcione corretamente</li>
   <li>Os conteúdos no aplicativos não violem as regras da Cielo</li>
   <li>Os SKUs dos produtos são enviados corretamente</li>
   <li>Informações para vitrine da Cielo Store estejam preenchidas corretamente, exclusivo para aplicativos públicos</li>
+  <li>Gerar valores para teste até R$0,05 centavos</li>
+  <li>Não mencionar a palavra Cielo</li>
+  <li>Caso o APP tenha webview, não ficar disponível a URL para a troca de URL dentro do APP. A URL não deverá aparecer.</li>
+  <li>Não conter palavrão</li>
+  <li>Não exibir imagens inapropriadas</li>
+  <li>Não exibir imagens/nomes de concorrentes</li>
+  <li>A versão a ser certificada deve ser maior do que a versão anterior. EX: versão anterior 1.0 / versão atual 1.1</li>
+  <li>Preencher corretamente o formulário de envio para certificação. Informar as funções do SDK utilizadas pelo APP, Changelog do APP (mudanças feitas para a versão que está sendo enviada para certificação), dados de acesso ao APP (caso ele possua) fornecidos por completo, versão do SDK utilizada, versão do OS utilizada.</li>
+  <li>Caso o APP rode em um servidor local, enviar um vídeo mostrando o fluxo do APP. Vídeos deverão ser atualizados conforme enviarem uma nova versão para certificação. Após gravar o vídeo do APP, mostrar a versão e data do vídeo.</li>
+  <li>100% das transações dever ser via Cielo</li>
 </ul>
+
+<p>“Qualquer informação necessária que esteja faltando, resultará na reprovação automática do aplicativo”</p>
 
 <h3 id="promover-aplicativo-para-produção">Promover Aplicativo para Produção</h3>
 
@@ -4179,25 +4191,6 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
 
 <p>Para realizar o download de aplicativos públicos na Cielo LIO, execute o seguinte procedimento
 Clique na aba Apps -&gt; Clique no aplicativo Cielo Store -&gt; Escolha o aplicativo que deseja realizar o download</p>
-
-<h1 id="certificação-de-apps">Certificação de APPs</h1>
-
-<p>Para a Certificação de APPs ser efetivada com sucesso, é necessário possuir os seguintes itens para a aprovação da APP.</p>
-
-<ul>
-  <li>Gerar valores para teste até R$0,05 centavos</li>
-  <li>Não mencionar a palavra Cielo</li>
-  <li>Caso o APP tenha webview, não ficar disponível a URL para a troca de URL dentro do APP. A URL não deverá aparecer.</li>
-  <li>Não conter palavrão</li>
-  <li>Não exibir imagens inapropriadas</li>
-  <li>Não exibir imagens/nomes de concorrentes</li>
-  <li>A versão a ser certificada deve ser maior do que a versão anterior. EX: versão anterior 1.0 / versão atual 1.1</li>
-  <li>Preencher corretamente o formulário de envio para certificação. Informar as funções do SDK utilizadas pelo APP, Changelog do APP (mudanças feitas para a versão que está sendo enviada para certificação), dados de acesso ao APP (caso ele possua) fornecidos por completo, versão do SDK utilizada, versão do OS utilizada.</li>
-  <li>Caso o APP rode em um servidor local, enviar um vídeo mostrando o fluxo do APP. Vídeos deverão ser atualizados conforme enviarem uma nova versão para certificação. Após gravar o vídeo do APP, mostrar a versão e data do vídeo.</li>
-  <li>100% das transações dever ser via Cielo</li>
-</ul>
-
-<p>“Qualquer informação necessária que esteja faltando, resultará na reprovação automática do aplicativo”</p>
 
 </div>
 
