[6db5291322e13df4a586937bb289ffe601d15b62]: Merge pull request #99 from DeveloperCielo/tsaitobraspag-patch-41
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2863,14 +2863,14 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td><code class="highlighter-rouge">MerchantOrderId</code></td>
       <td>Numero de identificação do Pedido.</td>
       <td>Texto</td>
-      <td>Bradesco: 27Banco do Brasil: 50</td>
+      <td>Bradesco: 27<br />Banco do Brasil: 50</td>
       <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Customer.Name</code></td>
       <td>Nome do Comprador.</td>
       <td>Texto</td>
-      <td>Bradesco: 34Banco do Brasil: 60</td>
+      <td>Bradesco: 34<br />Banco do Brasil: 60</td>
       <td>Não</td>
     </tr>
     <tr>
@@ -2905,7 +2905,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td><code class="highlighter-rouge">Customer.Address.City</code></td>
       <td>Cidade do endereço do Comprador.</td>
       <td>Texto</td>
-      <td>Bradesco: 50Banco do Brasil: 18</td>
+      <td>Bradesco: 50<br />Banco do Brasil: 18</td>
       <td>Sim</td>
     </tr>
     <tr>
@@ -2961,7 +2961,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td><code class="highlighter-rouge">Payment.BoletoNumber</code></td>
       <td>Número do Boleto enviado pelo lojista. Usado para contar boletos emitidos (“NossoNumero”).</td>
       <td>Texto</td>
-      <td>Bradesco: 11Banco do Brasil: 9</td>
+      <td>Bradesco: 11<br />Banco do Brasil: 9</td>
       <td>Não</td>
     </tr>
     <tr>
