[17285f381aff209db5df29adb4247007212ed9aa]: Merge pull request #100 from DeveloperCielo/tsaitobraspag-patch-42
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -4122,14 +4122,14 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">MerchantOrderId</code></td>
       <td>Order ID number.</td>
       <td>Text</td>
-      <td>Bradesco: 27Banco do Brasil: 50</td>
+      <td>Bradesco: 27<br />Banco do Brasil: 50</td>
       <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Customer.Name</code></td>
       <td>Buyer’s name.</td>
       <td>Text</td>
-      <td>Bradesco: 34Banco do Brasil: 60</td>
+      <td>Bradesco: 34<br />Banco do Brasil: 60</td>
       <td>No</td>
     </tr>
     <tr>
@@ -4164,7 +4164,7 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">Customer.Address.City</code></td>
       <td>Buyer’s address city.</td>
       <td>Text</td>
-      <td>Bradesco: 50Banco do Brasil: 18</td>
+      <td>Bradesco: 50<br />Banco do Brasil: 18</td>
       <td>Yes</td>
     </tr>
     <tr>
@@ -4220,7 +4220,7 @@ Below we specify any existing differences:</p>
       <td><code class="highlighter-rouge">Payment.BoletoNumber</code></td>
       <td>Bank slip number sent by the merchant. Used to count issued bank slips (“OurNumber”).</td>
       <td>Text</td>
-      <td>Bradesco: 11Banco do Brasil: 9</td>
+      <td>Bradesco: 11<br />Banco do Brasil: 9</td>
       <td>No</td>
     </tr>
     <tr>
