--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
             <ul class="doc">
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/env3ds">Manual de Integração</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/manual/emv3ds">Manual de Integração</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
