[39c174f7749eebd9e666a78cadb9ec0b4e285925]: Update 2018-09-10-emv3ds.md
Efetuado alteração do item "Quem pode usar o 3DS 2.0?"

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -148,7 +148,7 @@
 
 <h2 id="quem-pode-usar-o-3ds-20">Quem pode usar o 3DS 2.0?</h2>
 
-<p>Qualquer estabelecimento comercial que tenha e-Commerce ou um aplicativo pode utilizar a solução. É particularmente indicado para estabelecimentos que pertencem ao segmento de alto risco.</p>
+<p>Todos os estabelecimentos eCommerce devem se adequar à solução a partir de Abril de 2019 frente ao mandate de bandeira que exige autenticação em todas as transações digitais, sejam de débito, crédito ou pré-pago. Aos segmentos que possuem alto índice de chargeback/fraude, a solução tende a ser ainda mais vantajosa frente ao benefício de passar o liability shift ao banco emissor.</p>
 
 <h2 id="quais-são-requisitos-para-a-utilização-do-3ds-20">Quais são requisitos para a utilização do 3DS 2.0?</h2>
 
