[95892a5649497088f3b9eb7960910812984b9da1]: Update 2003-03-03-cielo-ecommerce.md
Solicitado a inclusão de emissores e bandeiras habilitados no Renova Fácil

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10416,6 +10416,53 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
   </tbody>
 </table>
 
+<h3 id="bandeiras-e-emissores-habilitados">Bandeiras e Emissores Habilitados</h3>
+
+<p>Bandeiras e Emissores que já estão com o Renova Fácil habilitados:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Emissores</th>
+      <th>VISA</th>
+      <th>MASTER</th>
+      <th>ELO</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">BRADESCO</code></td>
+      <td>&amp;check;</td>
+      <td>&amp;check;</td>
+      <td>&amp;check;</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">BANCO DO BRASIL</code></td>
+      <td>&amp;check;</td>
+      <td>N/A</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">SANTADER</code></td>
+      <td>&amp;check;</td>
+      <td>N/A</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CITI</code></td>
+      <td>&amp;check;</td>
+      <td>N/A</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">BANCO PAN</code></td>
+      <td>&amp;check;</td>
+      <td>N/A</td>
+      <td>N/A</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="tokenização-de-cartões">Tokenização de cartões</h1>
 
 <h2 id="o-que-é-a-tokenização-de-cartões">O que é a Tokenização de Cartões:</h2>
