[0696a4b49fb2a5e0e4afdb4cc5311d525d329b3c]: 2003-03-03-cielo-ecommerce.md
Solicitado a inclusão de emissores e bandeiras habilitados no Renova Facil

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10418,7 +10418,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
 
 <h3 id="bandeiras-e-emissores-habilitados">Bandeiras e Emissores Habilitados</h3>
 
-<p>Bandeiras e Emissores que já estão com o Renova Fácil habilitados:</p>
+<p>Bandeiras e Emissores que já estão com o Renova Facil habilitados:</p>
 
 <table>
   <thead>
@@ -10432,33 +10432,33 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">BRADESCO</code></td>
-      <td>&amp;check;</td>
-      <td>&amp;check;</td>
-      <td>&amp;check;</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">BANCO DO BRASIL</code></td>
-      <td>&amp;check;</td>
-      <td>N/A</td>
-      <td>N/A</td>
+      <td>Sim</td>
+      <td>—</td>
+      <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">SANTADER</code></td>
-      <td>&amp;check;</td>
-      <td>N/A</td>
-      <td>N/A</td>
+      <td>Sim</td>
+      <td>—</td>
+      <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CITI</code></td>
-      <td>&amp;check;</td>
-      <td>N/A</td>
-      <td>N/A</td>
+      <td>Sim</td>
+      <td>—</td>
+      <td>—</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">BANCO PAN</code></td>
-      <td>&amp;check;</td>
-      <td>N/A</td>
-      <td>N/A</td>
+      <td>Sim</td>
+      <td>—</td>
+      <td>—</td>
     </tr>
   </tbody>
 </table>
