[0675d783443922da52a250c819e490a1f91fe0b9]: Merge pull request #123 from DeveloperCielo/fcozaciucBP-patch-1
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5797,14 +5797,14 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td><code class="highlighter-rouge">Customer.Identity</code></td>
       <td>Texto</td>
       <td>14</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Número do RG, CPF ou CNPJ do Cliente.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Customer.IdentityType</code></td>
       <td>Texto</td>
       <td>24</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Tipo de documento de identificação do comprador (CPF ou CNPJ).</td>
     </tr>
     <tr>
