[6711c58bbf0846e9a09a6096ab51ea1ef8961d68]: Merge pull request #124 from DeveloperCielo/fcozaciucBP-patch-2
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -2511,6 +2511,20 @@ Below we specify any existing differences:</p>
       <td>Buyer’s date of birth.</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">Customer.Identity</code></td>
+      <td>Text</td>
+      <td>14</td>
+      <td>Yes</td>
+      <td>Buyer’s document number.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.IdentityType</code></td>
+      <td>Text</td>
+      <td>4</td>
+      <td>Yes</td>
+      <td>CPF or CNPJ</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Customer.Address.Street</code></td>
       <td>Text</td>
       <td>255</td>
