[4fc63f9928ae5c8b3d8fb5cc3402da39004237e7]: Update 2003-03-03-cielo-ecommerce.md
Informação extra adicionada > tempo disponível para consultar uma transação

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -3345,6 +3345,8 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
 
 <p>Para consultar uma venda de cartão de crédito, é necessário fazer um GET para o recurso Payment conforme o exemplo.</p>
 
+<aside class="notice">São elegíveis para a consulta, apenas transações dentro dos três ultimos meses</aside>
+
 <h4 id="requisição-6">Requisição</h4>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/1/sales/{PaymentId}</span></aside>
