[5804fb3b90022fe3af829f3bb5f3b7ebc33ef6a6]: Update 2003-03-03-cielo-ecommerce.md
Adicionada informação sobre tempo disponível para consulta de transações

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7445,6 +7445,8 @@ That way, when a transaction with recurrent markup is submitted to the API and C
 
 <p>To consult a credit card sale, it is necessary to do a GET for the Payment feature as the example.</p>
 
+<aside class="notice">Only transactions sent on the last three months are eligible for queries</aside>
+
 <h3 id="request-20">Request</h3>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/1/sales/{PaymentId}</span></aside>
