[85bb138d9640726186f5530843236148622cc818]: Update 2000-01-01-linkdepagamentos5.md

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/linkdepagamentos5">Link de Pagamentos</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/tutorial/checkout-tutoriais">Tutoriais</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
