[d5a11a6f8bf1bee592c27ea49529cd68dcb715bf]: Update en.yml
Update en.yml - change: Braspag -> Cielo

--- a/en/index.html
+++ b/en/index.html
@@ -75,7 +75,7 @@
 <div class="dev-hub-title">
     <div class="dev-hub-info">
         <h2>Cielo Developers</h2>
-        <p>Documents, articles and tutorials of all Braspag products are available on this page</p>
+        <p>Documents, articles and tutorials of all Cielo products are available on this page</p>
     </div>
 </div>
 
