[f0187bc9948945dd16040722c4e329d3875c3017]: Create 2003-03-03-retentativas8.md
2003-03-03-retentativas8.md - Create

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/retentativas8">Retentativas</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/tutorial/velocity9">Velocity</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
