[996e730bd5d1bb6cb2f6831f1f3f5ec648fa0c39]: Create 2003-03-03-autenticacaoseletiva9.md
2003-03-03-autenticacaoseletiva9.md - Create

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/autenticacaoseletiva9">Autenticação Seletiva</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/tutorial/velocity9">Velocity</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
