--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1551,6 +1551,10 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 
 <h3 id="6-pagamento-informando-ec">6. Pagamento informando EC</h3>
 
+<blockquote>
+  <p><strong>Atenção:</strong> Para a utilização dessa forma de pagamento, é necessário uma pré habilitação junto a Cielo, para o recebimento com MULTI-EC.</p>
+</blockquote>
+
 <p>Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do principal. O EC informado deve estar configurado na LIO na hora da inicialização para que funcione ou o SDK irá enviar uma exceção do tipo <code class="highlighter-rouge">InvalidParameterException</code>.
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:</p>
 
