[d5cbaeb7466f4ffd7987053a52c942bf2d629b91]: recurrent name obrigatório

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5367,7 +5367,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
       <td>Buyer’s name.</td>
       <td>Text</td>
       <td>255</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
