[098e3f06c91a259c123ab6cf22e91b65eda3ce2f]: Recorrencia nome obrigatório yes

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -8336,7 +8336,7 @@ Nesse modelo, o sistema do lojista é encarregado por definir o período, os dad
       <td>Nome do Comprador.</td>
       <td>Texto</td>
       <td>255</td>
-      <td>Não</td>
+      <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
