[ea5cdadd74c5e96441fc34fc7d3028e157e7dd32]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2520,7 +2520,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
   </tbody>
 </table>
 
-<h2 id="transferência-eletronica">Transferência Eletronica</h2>
+<h2 id="transferência-eletrônica">Transferência Eletrônica</h2>
 
 <h3 id="transação-simples-1">Transação Simples</h3>
 
@@ -3299,8 +3299,6 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
     </tr>
   </tbody>
 </table>
-
-<aside class="warning">O Cancelamento de transações de boleto ocorrem apenas via Backoffice. Não há cancelamento via API disponivel.</aside>
 
 <h2 id="erros-de-integração">Erros de Integração</h2>
 
