--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -4925,7 +4925,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
 
 <h3 id="cancelamento-via-backoffice">Cancelamento via Backoffice</h3>
 
-<p>O Cancelamento via Backoffice é a unica opção para realizar o cancelamento de transações de boletos e Débito Online.
+<p>O Cancelamento via Backoffice é a unica opção para realizar o cancelamento de transações de Débito Online.
 É possivel realizar tanto o cancelamento total quanto o Cancelamento parcial via O Backoffice Cielo.</p>
 
 <p>Efeitos sobre o meio de pagamento</p>
@@ -4940,12 +4940,6 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Boleto</td>
-      <td>Cancelamento apenas na API. O retorno do valor é feito pelo proprio lojista</td>
-      <td>Definido pelo lojista</td>
-      <td>Não</td>
-    </tr>
     <tr>
       <td>Transferência Eletrônica</td>
       <td>Cancelamento apenas na API. O retorno do valor é feito pelo proprio lojista</td>
