[75061a4f79595119afb2624b0c83d879dc619aca]: Create 2003-03-03-cartaoalelo3.md
2003-03-03-cartaoalelo3.md - Create

--- a/en/index.html
+++ b/en/index.html
@@ -108,6 +108,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/en/manual/cartaoalelo3">Alelo Cards</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/en/manual/zeroauth4">Zero Auth</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
